--- a/styles/style.scss
+++ b/styles/style.scss
@@ -64,4 +64,5 @@ body {
   min-height: 100vh;
   margin: 0 auto;
   padding: 0 6.4rem;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
